# youtube-music-mcp

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  schema.sql
src/: main.ts
src/auth/: index.ts  oauth.ts  token-store.ts
src/cache/: db.ts  index.ts  queries.ts  schema.sql
src/tools/: index.ts
src/types/: index.ts
src/youtube/: client.ts  index.ts
src/youtube_music_mcp/: auth.py  cache.py  server.py  tools.py  types.py
tests/: test_cache.py  test_tools.py
tests/unit/: auth.test.ts  cache.test.ts  tools.test.ts  youtube.test.ts
